Bimba Dev/src/objects/Key_Action_Decision__c.object
<CustomObject>
    <description>TOOLKIT - An object to track action items and key decisions related to the project.</description>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Open__c</fullName>
        <formula>IF(NOT(ISPICKVAL(Status__c, &quot;Completed&quot;)), NOW() - CreatedDate,  Completed_Date__c - (DATEVALUE(CreatedDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Decision_Outcome__c</fullName>
        <inlineHelpText>Enter details of the outcome of the action item (what was determined) or the decision reached (what was agreed to, which option was selected). This field is required when Status is Completed.</inlineHelpText>
        <label>Decision/Outcome</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Enter a detailed desription of the Action to be completed or the Decision needed.</inlineHelpText>
        <label>Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <inlineHelpText>Enter the date when the Action Item must be completed or the Decision must be made. Items not completed by the Due Date pose a risk to deliverables.</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Key_Action_Decision__c</fullName>
        <displayFormat>KAD-{00000}</displayFormat>
        <label>Key Action/Decision #</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Options__c</fullName>
        <inlineHelpText>Enter the options under evaluation.</inlineHelpText>
        <label>Options</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Days to close entered in Help Text are a suggestion, and can be changed by individual projects to meet their specific needs.</description>
        <inlineHelpText>Normal Priority items should be closed within 5 business days. High Priority items should be closed within 2 business days.</inlineHelpText>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Normal</fullName>
                <color>#0B6FCE</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
                <color>#F3D904</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_Capability__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Indicate which Capability this Key Action/Key is related to, if any.</inlineHelpText>
        <label>Related Capability</label>
        <referenceTo>Capability__c</referenceTo>
        <relationshipLabel>Key Actions/Decisions</relationshipLabel>
        <relationshipName>Key_Actions_Decisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Issue_Risk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If this Key Action/Decision is directly related to a single Issue or Risk, select that Issue or Risk here.</inlineHelpText>
        <label>Related Issue/Risk</label>
        <referenceTo>Issues_Risks__c</referenceTo>
        <relationshipLabel>Key Actions/Decisions</relationshipLabel>
        <relationshipName>Key_Actions_Decisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Key_Action_Decision__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If this Key Action/Decision was created as a result of another Action Item or Decision, select the related item here.</inlineHelpText>
        <label>Related Key Action/Decision</label>
        <referenceTo>Key_Action_Decision__c</referenceTo>
        <relationshipLabel>Key Actions/Decisions</relationshipLabel>
        <relationshipName>Key_Actions_Decisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the Release that this Key Action/Decision is related to.</inlineHelpText>
        <label>Related Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Key Actions/Decisions</relationshipLabel>
        <relationshipName>Key_Actions_Decisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If this Key Action/Decision is directly related to a single Request, select that Request here.</inlineHelpText>
        <label>Related Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Key Actions/Decisions</relationshipLabel>
        <relationshipName>Key_Actions_Decisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <color>#A53711</color>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
                <color>#419249</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Key Action/Decision</label>
    <listViews>
        <fullName>All_Open_Action_Items</fullName>
        <columns>NAME</columns>
        <columns>Key_Action_Decision__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Days_Open__c</columns>
        <columns>Description__c</columns>
        <columns>Decision_Outcome__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Key_Action_Decision__c.Action_Item</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>All Open Action Items</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Decisions</fullName>
        <columns>NAME</columns>
        <columns>Key_Action_Decision__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Days_Open__c</columns>
        <columns>Description__c</columns>
        <columns>Decision_Outcome__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Key_Action_Decision__c.Key_Decision</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>All Open Decisions</label>
    </listViews>
    <listViews>
        <fullName>All_Overdue_Action_Items</fullName>
        <columns>NAME</columns>
        <columns>Key_Action_Decision__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Days_Open__c</columns>
        <columns>Description__c</columns>
        <columns>Decision_Outcome__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Key_Action_Decision__c.Action_Item</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Due_Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>All Overdue Action Items</label>
    </listViews>
    <listViews>
        <fullName>All_Overdue_Decisions</fullName>
        <columns>NAME</columns>
        <columns>Key_Action_Decision__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Days_Open__c</columns>
        <columns>Description__c</columns>
        <columns>Decision_Outcome__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Key_Action_Decision__c.Key_Decision</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Due_Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>All Overdue Decision</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Action_Items</fullName>
        <columns>NAME</columns>
        <columns>Key_Action_Decision__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Days_Open__c</columns>
        <columns>Description__c</columns>
        <columns>Decision_Outcome__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Key_Action_Decision__c.Action_Item</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>My Open Action Items</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Decisions</fullName>
        <columns>NAME</columns>
        <columns>Key_Action_Decision__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Days_Open__c</columns>
        <columns>Description__c</columns>
        <columns>Decision_Outcome__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Key_Action_Decision__c.Key_Decision</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>My Open Decisions</label>
    </listViews>
    <nameField>
        <label>Key Action/Decision Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Key Actions/Decisions</pluralLabel>
    <recordTypes>
        <fullName>Action_Item</fullName>
        <active>true</active>
        <description>Used to document Action Items that need to be completed by resources on the Program/Project.</description>
        <label>Action Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>Key_Decision</fullName>
        <active>true</active>
        <description>Used to track Key Decisions that impact the Program/Project.</description>
        <label>Key Decision</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Decision_Outcome_Required_when_Completed</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Status__c, &quot;Completed&quot;) &amp;&amp; ISNULL( Decision_Outcome__c )</errorConditionFormula>
        <errorDisplayField>Decision_Outcome__c</errorDisplayField>
        <errorMessage>Decision/Outcome is required when Status is Completed.</errorMessage>
    </validationRules>
</CustomObject>